feat: Add URL scraping and subscription management
Integrates a new 'dist' dependency and CDN paths for enhanced functionality.
Introduces URL scraping for job descriptions via the Gemini API.
Includes UI elements and state management for URL fetching status and error handling.
Adds a route and page for managing user subscriptions, including a dedicated page component.
Updates `geminiService.ts` to parse specific scraping errors and Gemini API errors.
Enhances `Header.tsx` to display a loading indicator during URL fetching.
Refactors `HomePage.tsx` to remove redundant context destructuring.
Adds `isFetchingUrl` and `setIsFetchingUrl` to the `ProfileContext`.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@google/genai": "^1.26.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "pdfjs-dist": "^5.4.296"
+    "pdfjs-dist": "^5.4.296",
+    "dist": "^0.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
