--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "keju",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
