--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.9.4",
+    "@google/genai": "^1.26.0",
+    "pdfjs-dist": "^4.4.168"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
@@ -13,7 +16,9 @@
     "@vitejs/plugin-react": "^5.1.0"
   },
   "scripts": {
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "engines": {
     "node": ">=18.0.0"
