--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.9.4",
+    "@supabase/supabase-js": "^2.45.0",
     "@google/genai": "^1.26.0",
     "pdfjs-dist": "^4.4.168"
   },
