--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "react-router-dom": "^7.9.4",
     "@supabase/supabase-js": "^2.45.0",
     "@google/genai": "^1.26.0",
-    "pdfjs-dist": "^4.4.168"
+    "pdfjs-dist": "^4.4.168",
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^7.3.0"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^5.1.0"
+    "@vitejs/plugin-react": "^5.1.0",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/express-rate-limit": "^5.1.6"
   },
   "scripts": {
     "dev": "vite",
