--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build",
+    "build:server": "tsc -p tsconfig.server.json",
+    "preview": "vite preview",
+    "start": "node build/server/index.js"
   },
   "engines": {
     "node": ">=18.0.0"
