--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "vite": "^5.0.0",
     "@vitejs/plugin-react": "^5.1.0",
     "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/express-rate-limit": "^5.1.6"
+    "@types/cors": "^2.8.17"
   },
   "scripts": {
     "dev": "vite",
