--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -12,5 +12,5 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["server/**/*.ts", "types.ts"]
+  "include": ["server/**/*.ts", "types.ts", "workspaceDefaults.ts"]
 }
