prep to deploy to google run

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,17 @@
-# Placeholder backend env. Do not commit secrets; use Secret Manager / Cloud Run env vars.
+VITE_API_BASE_URL=
+VITE_SUPABASE_URL=
+VITE_SUPABASE_PUBLISHABLE_KEY=
+
+# Backend
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 SUPABASE_PUBLISHABLE_KEY=
 GEMINI_API_KEY=
 ALLOWED_ORIGINS=["http://localhost:5173"]
 CSP_POLICY=
-FRONTEND_DIST=
+FRONTEND_DIST=/app/frontend
+
+# GCP / BigQuery
 GCP_PROJECT_ID=
 BIGQUERY_DATASET=
 BIGQUERY_TABLE=
