--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "vite": "^5.0.0"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "tsc --noEmit"
   },
   "engines": {
     "node": ">=18.0.0"
