--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,6 @@ httpx==0.27.2
 pydantic==2.9.2
 pydantic-settings==2.5.2
 # For local dev on Python 3.9 keep ADK/GenAI optional; install compatible versions later if needed.
-tectonic==0.5.1
+# Tectonic is installed via OS package in Dockerfile for PDF generation.
 google-cloud-bigquery==3.25.0
+google-genai==1.0.0
