fixing the deployment

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,5 @@ pydantic-settings==2.5.2
 # Tectonic is installed via OS package in Dockerfile for PDF generation.
 google-cloud-bigquery==3.25.0
 google-genai==1.0.0
+pytest==8.3.3
+pytest-asyncio==0.24.0
