--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.1.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
+    "jsdom": "^25.0.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^2.1.3"
   },
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "tsc --noEmit"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "tsc --noEmit",
+    "test": "vitest run"
   },
   "engines": {
     "node": ">=18.0.0"
