--- a/.github/workflows/cloudrun.yml
+++ b/.github/workflows/cloudrun.yml
@@ -87,10 +87,10 @@ jobs:
             --set-env-vars SUPABASE_URL="${{ secrets.SUPABASE_URL }}" \
             --set-env-vars SUPABASE_SERVICE_ROLE_KEY="${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" \
             --set-env-vars SUPABASE_PUBLISHABLE_KEY="${{ secrets.VITE_SUPABASE_PUBLISHABLE_KEY }}" \
-            --set-env-vars GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}" \
             --set-env-vars ALLOWED_ORIGINS='${{ secrets.ALLOWED_ORIGINS }}' \
             --set-env-vars CSP_POLICY='${{ secrets.CSP_POLICY }}' \
             --set-env-vars FRONTEND_DIST="/app/frontend" \
             --set-env-vars GCP_PROJECT_ID="${{ secrets.GCP_PROJECT_ID }}" \
+            --set-env-vars GCP_REGION="${{ env.REGION }}" \
             --set-env-vars BIGQUERY_DATASET="${{ secrets.BIGQUERY_DATASET }}" \
             --set-env-vars BIGQUERY_TABLE="${{ secrets.BIGQUERY_TABLE }}"
