--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "tesseract.js": "^5.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^22.9.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.1.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.0",
+    "autoprefixer": "^10.4.22",
     "jsdom": "^25.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "vitest": "^2.1.3"
