--- a/.github/workflows/cloudrun.yml
+++ b/.github/workflows/cloudrun.yml
@@ -89,7 +89,7 @@ jobs:
             --set-env-vars SUPABASE_PUBLISHABLE_KEY=\"${{ secrets.VITE_SUPABASE_PUBLISHABLE_KEY }}\" \
             --set-env-vars ALLOWED_ORIGINS='${{ secrets.ALLOWED_ORIGINS }}' \
             --set-env-vars CSP_POLICY='${{ secrets.CSP_POLICY }}' \
-            --set-env-vars FRONTEND_DIST=\"/app/frontend\" \
+            --set-env-vars FRONTEND_DIST_DIR=\"/app/frontend\" \
             --set-env-vars GCP_PROJECT_ID=\"${{ secrets.GCP_PROJECT_ID }}\" \
             --set-env-vars GCP_REGION=\"${{ env.REGION }}\" \
             --set-env-vars BIGQUERY_DATASET=\"${{ secrets.BIGQUERY_DATASET }}\" \
